coolprop-sys/src/bindings_generated_static.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub const __bool_true_false_are_defined: u32 = 1;
pub const true_: u32 = 1;
pub const false_: u32 = 0;
unsafe extern "C" {
    pub fn Props1SI(
        FluidName: *const ::core::ffi::c_char,
        Output: *const ::core::ffi::c_char,
    ) -> f64;
}
unsafe extern "C" {
    pub fn Props1SImulti(
        Outputs: *const ::core::ffi::c_char,
        backend: *mut ::core::ffi::c_char,
        FluidNames: *const ::core::ffi::c_char,
        fractions: *const f64,
        length_fractions: ::core::ffi::c_long,
        result: *mut f64,
        resdim1: *mut ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn PropsSI(
        Output: *const ::core::ffi::c_char,
        Name1: *const ::core::ffi::c_char,
        Prop1: f64,
        Name2: *const ::core::ffi::c_char,
        Prop2: f64,
        FluidName: *const ::core::ffi::c_char,
    ) -> f64;
}
unsafe extern "C" {
    pub fn PropsSImulti(
        Outputs: *const ::core::ffi::c_char,
        Name1: *const ::core::ffi::c_char,
        Prop1: *mut f64,
        size_Prop1: ::core::ffi::c_long,
        Name2: *const ::core::ffi::c_char,
        Prop2: *mut f64,
        size_Prop2: ::core::ffi::c_long,
        backend: *mut ::core::ffi::c_char,
        FluidNames: *const ::core::ffi::c_char,
        fractions: *const f64,
        length_fractions: ::core::ffi::c_long,
        result: *mut f64,
        resdim1: *mut ::core::ffi::c_long,
        resdim2: *mut ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn PhaseSI(
        Name1: *const ::core::ffi::c_char,
        Prop1: f64,
        Name2: *const ::core::ffi::c_char,
        Prop2: f64,
        FluidName: *const ::core::ffi::c_char,
        phase: *mut ::core::ffi::c_char,
        n: ::core::ffi::c_int,
    ) -> ::core::ffi::c_long;
}
unsafe extern "C" {
    pub fn get_global_param_string(
        param: *const ::core::ffi::c_char,
        Output: *mut ::core::ffi::c_char,
        n: ::core::ffi::c_int,
    ) -> ::core::ffi::c_long;
}
unsafe extern "C" {
    pub fn get_parameter_information_string(
        param: *const ::core::ffi::c_char,
        Output: *mut ::core::ffi::c_char,
        n: ::core::ffi::c_int,
    ) -> ::core::ffi::c_long;
}
unsafe extern "C" {
    pub fn get_fluid_param_string(
        fluid: *const ::core::ffi::c_char,
        param: *const ::core::ffi::c_char,
        Output: *mut ::core::ffi::c_char,
        n: ::core::ffi::c_int,
    ) -> ::core::ffi::c_long;
}
unsafe extern "C" {
    pub fn get_fluid_param_string_len(
        fluid: *const ::core::ffi::c_char,
        param: *const ::core::ffi::c_char,
    ) -> ::core::ffi::c_long;
}
unsafe extern "C" {
    pub fn set_config_string(key: *const ::core::ffi::c_char, val: *const ::core::ffi::c_char);
}
unsafe extern "C" {
    pub fn set_config_double(key: *const ::core::ffi::c_char, val: f64);
}
unsafe extern "C" {
    pub fn set_config_bool(key: *const ::core::ffi::c_char, val: bool);
}
unsafe extern "C" {
    pub fn set_departure_functions(
        string_data: *const ::core::ffi::c_char,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn set_reference_stateS(
        Ref: *const ::core::ffi::c_char,
        reference_state: *const ::core::ffi::c_char,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn set_reference_stateD(
        Ref: *const ::core::ffi::c_char,
        T: f64,
        rhomolar: f64,
        hmolar0: f64,
        smolar0: f64,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn propssi_(
        Output: *const ::core::ffi::c_char,
        Name1: *const ::core::ffi::c_char,
        Prop1: *const f64,
        Name2: *const ::core::ffi::c_char,
        Prop2: *const f64,
        FluidName: *const ::core::ffi::c_char,
        output: *mut f64,
    );
}
unsafe extern "C" {
    pub fn F2K(T_F: f64) -> f64;
}
unsafe extern "C" {
    pub fn K2F(T_K: f64) -> f64;
}
unsafe extern "C" {
    pub fn get_param_index(param: *const ::core::ffi::c_char) -> ::core::ffi::c_long;
}
unsafe extern "C" {
    pub fn get_input_pair_index(pair: *const ::core::ffi::c_char) -> ::core::ffi::c_long;
}
unsafe extern "C" {
    pub fn redirect_stdout(file: *const ::core::ffi::c_char) -> ::core::ffi::c_long;
}
unsafe extern "C" {
    pub fn get_debug_level() -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn set_debug_level(level: ::core::ffi::c_int);
}
unsafe extern "C" {
    pub fn saturation_ancillary(
        fluid_name: *const ::core::ffi::c_char,
        output: *const ::core::ffi::c_char,
        Q: ::core::ffi::c_int,
        input: *const ::core::ffi::c_char,
        value: f64,
    ) -> f64;
}
unsafe extern "C" {
    pub fn HAPropsSI(
        Output: *const ::core::ffi::c_char,
        Name1: *const ::core::ffi::c_char,
        Prop1: f64,
        Name2: *const ::core::ffi::c_char,
        Prop2: f64,
        Name3: *const ::core::ffi::c_char,
        Prop3: f64,
    ) -> f64;
}
unsafe extern "C" {
    pub fn cair_sat(T: f64) -> f64;
}
unsafe extern "C" {
    pub fn hapropssi_(
        Output: *const ::core::ffi::c_char,
        Name1: *const ::core::ffi::c_char,
        Prop1: *const f64,
        Name2: *const ::core::ffi::c_char,
        Prop2: *const f64,
        Name3: *const ::core::ffi::c_char,
        Prop3: *const f64,
        output: *mut f64,
    );
}
unsafe extern "C" {
    pub fn HAProps(
        Output: *const ::core::ffi::c_char,
        Name1: *const ::core::ffi::c_char,
        Prop1: f64,
        Name2: *const ::core::ffi::c_char,
        Prop2: f64,
        Name3: *const ::core::ffi::c_char,
        Prop3: f64,
    ) -> f64;
}
unsafe extern "C" {
    pub fn haprops_(
        Output: *const ::core::ffi::c_char,
        Name1: *const ::core::ffi::c_char,
        Prop1: *const f64,
        Name2: *const ::core::ffi::c_char,
        Prop2: *const f64,
        Name3: *const ::core::ffi::c_char,
        Prop3: *const f64,
        output: *mut f64,
    );
}
unsafe extern "C" {
    pub fn AbstractState_factory(
        backend: *const ::core::ffi::c_char,
        fluids: *const ::core::ffi::c_char,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    ) -> ::core::ffi::c_long;
}
unsafe extern "C" {
    pub fn AbstractState_fluid_names(
        handle: ::core::ffi::c_long,
        fluids: *mut ::core::ffi::c_char,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_free(
        handle: ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_set_fractions(
        handle: ::core::ffi::c_long,
        fractions: *const f64,
        N: ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_get_mole_fractions(
        handle: ::core::ffi::c_long,
        fractions: *mut f64,
        maxN: ::core::ffi::c_long,
        N: *mut ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_get_mole_fractions_satState(
        handle: ::core::ffi::c_long,
        saturated_state: *const ::core::ffi::c_char,
        fractions: *mut f64,
        maxN: ::core::ffi::c_long,
        N: *mut ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_get_fugacity(
        handle: ::core::ffi::c_long,
        i: ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    ) -> f64;
}
unsafe extern "C" {
    pub fn AbstractState_get_fugacity_coefficient(
        handle: ::core::ffi::c_long,
        i: ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    ) -> f64;
}
unsafe extern "C" {
    pub fn AbstractState_update(
        handle: ::core::ffi::c_long,
        input_pair: ::core::ffi::c_long,
        value1: f64,
        value2: f64,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_specify_phase(
        handle: ::core::ffi::c_long,
        phase: *const ::core::ffi::c_char,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_unspecify_phase(
        handle: ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    );
}
unsafe extern "C" {
    pub fn AbstractState_keyed_output(
        handle: ::core::ffi::c_long,
        param: ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    ) -> f64;
}
unsafe extern "C" {
    pub fn AbstractState_first_saturation_deriv(
        handle: ::core::ffi::c_long,
        Of: ::core::ffi::c_long,
        Wrt: ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    ) -> f64;
}
unsafe extern "C" {
    pub fn AbstractState_first_partial_deriv(
        handle: ::core::ffi::c_long,
        Of: ::core::ffi::c_long,
        Wrt: ::core::ffi::c_long,
        Constant: ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    ) -> f64;
}
unsafe extern "C" {
    pub fn AbstractState_second_two_phase_deriv(
        handle: ::core::ffi::c_long,
        Of1: ::core::ffi::c_long,
        Wrt1: ::core::ffi::c_long,
        Constant1: ::core::ffi::c_long,
        Wrt2: ::core::ffi::c_long,
        Constant2: ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    ) -> f64;
}
unsafe extern "C" {
    pub fn AbstractState_second_partial_deriv(
        handle: ::core::ffi::c_long,
        Of1: ::core::ffi::c_long,
        Wrt1: ::core::ffi::c_long,
        Constant1: ::core::ffi::c_long,
        Wrt2: ::core::ffi::c_long,
        Constant2: ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    ) -> f64;
}
unsafe extern "C" {
    pub fn AbstractState_first_two_phase_deriv_splined(
        handle: ::core::ffi::c_long,
        Of: ::core::ffi::c_long,
        Wrt: ::core::ffi::c_long,
        Constant: ::core::ffi::c_long,
        x_end: f64,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    ) -> f64;
}
unsafe extern "C" {
    pub fn AbstractState_first_two_phase_deriv(
        handle: ::core::ffi::c_long,
        Of: ::core::ffi::c_long,
        Wrt: ::core::ffi::c_long,
        Constant: ::core::ffi::c_long,
        errcode: *mut ::core::ffi::c_long,
        message_buffer: *mut ::core::ffi::c_char,
        buffer_length: ::core::ffi::c_long,
    ) -> f64;
}
